# axMini

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/axMini/: ASTNode.hpp  AutomationFactory.hpp  AutomationObject.hpp  ExecutionEngine.hpp  Lexer.hpp  Logger.hpp  Motor.hpp  Parser.hpp  Token.hpp  Types.hpp  Valve.hpp  Variable.hpp  VariableEngine.hpp
src/: AutomationFactory.cpp  CMakeLists.txt  ExecutionEngine.cpp  Lexer.cpp  Logger.cpp  Motor.cpp  Parser.cpp  Valve.cpp  VariableEngine.cpp  main.cpp
tests/: CMakeLists.txt  test_engine.cpp  test_execution.cpp  test_lexer.cpp  test_motor.cpp  test_parser.cpp  test_valve.cpp
